--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+	implementation 'mysql:mysql-connector-java:8.0.33'
 }
-
 
 tasks.named('test') {
 	useJUnitPlatform()
